--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ org.gradle.parallel=true
 # Mod Properties
 	mod_version = 0.0.1-1.19.4
 	maven_group = net.bosh
-	archives_base_name = tutorialmod
+	archives_base_name = arpglootmod
 
 # Dependencies
 	fabric_version=0.75.3+1.19.4
